--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -28,7 +28,9 @@
               = link_to '#', data: {behavior: 'open-gift-basket'} do
                 =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
                 Gift Basket
-                -# TODO add count
+                %span(data-behavior="gift-basket-count")
+                  = gift_basket_count
+                  
           - if current_user
             %li
               = link_to user_session_path, method: :delete do
