--- a/app/views/admin/evaluation_recommendations/show.haml
+++ b/app/views/admin/evaluation_recommendations/show.haml
@@ -18,3 +18,31 @@
         %td
           = question_rank.question.prompt
           %strong (#{displayable_response(question_rank.response)})
+          %span.text-muted
+            [
+            - if question_rank.score < 0.0
+              #{-1 * Recommendations::Engine::NEGATIVE_RANK_PENALTY}
+              &times;
+            #{Recommendations::Engine::QUESTION_WEIGHT_BASE}
+            %sup #{number_with_precision(question_rank.impact.question_impact, precision: 2)}
+            - response_weights = []
+            - if question_rank.question.is_a?(SurveyQuestions::MultipleChoice)
+              :ruby
+                question_rank.response.survey_question_options.each do |option|
+                  question_rank.impact.response_impacts.each do |impact|
+                    if impact.survey_question_option_id == option.id
+                      response_weights << impact.impact
+                    end
+                  end
+                end
+            - elsif question_rank.question.is_a?(SurveyQuestions::Range)
+              - response_weights << question_rank.response.range_response
+              
+            - if response_weights.any?
+              &times; 
+              - if response_weights.many?
+                (
+              #{response_weights.map{|w| number_with_precision(w, precision: 2)}.join(' + ')}
+              - if response_weights.many?
+                )
+            ]
