gift featured flag [#137967651]

--- a/app/views/admin/gifts/_form.html.haml
+++ b/app/views/admin/gifts/_form.html.haml
@@ -20,6 +20,7 @@
         = f.input :wrapt_sku, label: 'Wrapt SKU', disabled: true
     = f.input :date_available, html5: true, label: 'Date Available'
     = f.input :date_discontinued, html5: true, label: 'Date Discontinued'
+    = f.input :featured, label: 'Promote this gift in the recommendations'
 
   .form-actions
     = f.button :submit, 'Save', class: 'btn btn-primary'
