--- a/app/views/gift_recommendations/_thumbnail.haml
+++ b/app/views/gift_recommendations/_thumbnail.haml
@@ -1,2 +1,3 @@
-%div{style: 'display: inline-block; width: 50px; height: 50px; background-color: blue; text-align: center;'}
-  = locals[:index] + 1
+%span.gr__indicator-thumbnail
+  %span.gr__indicator-inactive-overlay
+  = image_tag locals[:image]&.image_url(:small)
