wip style adjustments

--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -25,12 +25,15 @@ $blue-005: rgb(170, 186, 213); // #AABAD5
 $blue-006: rgb(178, 193, 221); // #B2C1DD
 $blue-007: rgb(237, 242, 248); // #EDF2F8
 $blue-008: rgb(142, 160, 194); // #8EA1C2
+$blue-009: rgb(125, 150, 188); // #7D96BC
+$blue-010: rgb(247, 248, 251); // #F7F8FB
 
 $tan-001: rgb(242, 221, 209); // #F2DDD1
 $tan-002: rgb(196, 170, 127); // #C4AA7F
 
 $orange-001: rgb(247, 153, 112); // #F79970
 $orange-002: rgb(241, 134, 88); // #F28658
+$orange-003: rgb(251, 241, 237); // #FBF1ED
 
 $green-001: rgb(191, 232, 158); // #BFE89E
 $green-002: rgb(41, 180, 115); // #29B473
