--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -2,6 +2,10 @@
   line-height: 1;
   min-width: 180px;
 }
+.btn-narrower {
+  padding-left: 20px;
+  padding-right: 20px;
+}
 .btn:focus, 
 .btn.focus,
 .btn:active:focus, 
