--- a/app/assets/stylesheets/modules/_carousel.scss
+++ b/app/assets/stylesheets/modules/_carousel.scss
@@ -5,6 +5,9 @@
 .wrapt-carousel {
   position: relative;
 }
+.wrapt-carousel--wrapper {
+  margin-top: 36px;
+}
 
 .wrapt-carousel__slides {
   white-space: nowrap;
