--- a/app/views/gift_recommendations/_gift_image_nav.haml
+++ b/app/views/gift_recommendations/_gift_image_nav.haml
@@ -1,8 +1,8 @@
 - css_classes = locals[:css_classes]
-%div.clearfix.pa1{class: css_classes[:container]}
-  .gr-image-carousel__image-text
-  .gr-image-carousel__nav-links.clearfix
+%div.clearfix{class: css_classes[:container]}
+  -# .gr-image-carousel__image-text
+  .gr-image-carousel__nav-links.clearfix.pull-right
     = link_to '#', class: 'wrapt-carousel__nav gr-image-carousel__nav prev' do
-      =embedded_svg('icon-caret-left', class: "gr-carousel__nav--caret-left")
+      =embedded_svg('icon-caret-left', class: "gr-carousel__image-nav--caret-left")
     = link_to '#', class: 'wrapt-carousel__nav gr-image-carousel__nav next' do
-      =embedded_svg('icon-caret-right', class: "gr-carousel__nav--caret-right")
+      =embedded_svg('icon-caret-right', class: "gr-carousel__image-nav--caret-right")
