--- a/app/assets/stylesheets/modules/_gift_recommendations.scss
+++ b/app/assets/stylesheets/modules/_gift_recommendations.scss
@@ -117,10 +117,15 @@ $gr-carousel-nav__width: 82.5px;
   display: inline-block;
   width: 136px;
   height: 112px;
-  background-color: blue;
   text-align: center;
   margin: 30px;
   position: relative;
+  overflow: hidden;
+}
+
+.gr-carousel__indicator img {
+  min-height: 100%;
+  min-width: 100%;
 }
 
 // gift recommendations carousel gift
