--- a/app/views/gift_recommendations/index.haml
+++ b/app/views/gift_recommendations/index.haml
@@ -1,10 +1,12 @@
 .container
-  %h2.text-center
-    = "#{@profile.name}'s Gift Recommendations"
-  %p.small.text-center
-    ="See a gift you like but not sure it's right for the occasion? Like it. Find a gift you want to 'send' to #{@profile.name}? Add it to you figt basket & 'send' it. Sending a gift in beta simpy sends an email to your giftee nootifying them of the gift you have selected, explaining why they recieved the email."
-  - gifts = load_gift_recommendation_carousel_data(@gift_recommendations)
-  = carousel(carousel: gifts, unique_carousel_name: 'gr-carousel', slide_content_singular: 'gift')
+  .row
+    .col-xs-12
+      %h2.text-center
+        = "#{@profile.name}'s Gift Recommendations"
+      %p.small.text-center
+        ="See a gift you like but not sure it's right for the occasion? Like it. Find a gift you want to 'send' to #{@profile.name}? Add it to you figt basket & 'send' it. Sending a gift in beta simpy sends an email to your giftee nootifying them of the gift you have selected, explaining why they recieved the email."
+      - gifts = load_gift_recommendation_carousel_data(@gift_recommendations)
+      = carousel(carousel: gifts, unique_carousel_name: 'gr-carousel', slide_content_singular: 'gift')
 
 - content_for :page_js do
   = render '/application/carousel_js'
@@ -13,7 +15,7 @@
       $('[data-behavior=dislike-reason]').change(function() {
         var form = $(this).parents('[data-behavior=dislike-form]');
         
-        // advance the form after 2 seconds
+        // advance the form after 1 second
         window.setTimeout(function() {
           $('.gr-carousel__nav.next').click()  
         }, 1000)
