--- a/app/assets/stylesheets/modules/_gift_basket.scss
+++ b/app/assets/stylesheets/modules/_gift_basket.scss
@@ -14,7 +14,7 @@
   top: 0;
   right: 0;
   height: 100%;
-  width: 33%;
+  width: 480px;
   z-index: 1001;
   background-color: white;
   display: none;
@@ -50,10 +50,61 @@
   color: white;
 }
 
+// Gift Rows
+
+.gift-basket--gift {
+  margin-bottom: 25px;
+}
+
+.gift-basket--gift-image {
+  height: 98px;
+  width: 112px;
+  overflow: hidden;
+  display: inline-block;
+  float: left;
+  margin-right: 15px;
+}
+
+.gift-basket--gift-text {
+  padding: 15px 0;
+  position: relative;
+}
+
+.gift-basket--gift-title {
+  font-size: rem(14);
+  line-height: 24px;
+}
+
+.gift-basket--gift-description {
+  color: $gray-007;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  font-size: rem(12);
+  line-height: 18px;
+  height: 18px; 
+}
+
+.gift-basket--gift-price {
+  font-size: rem(14);
+  line-height: 24px;
+}
+
 .gift-basket--remove-gift-link {
   display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .gift-basket--gift:hover .gift-basket--remove-gift-link {
   display: inline-block;
+}
+
+.gift-basket--remove-gift-link a:hover {
+  text-decoration: none;
+}
+
+.gift-basket__icon-remove {
+  width: 12px;
+  height: 12px;
 }
