--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
  *= require bootstrap-slider
  */
 
-// @import "modules/fonts"; // TODO uncomment when have fonts
+@import "modules/fonts";
 @import "bootstrap-sprockets";
 @import 'bootstrap-custom';
 @import "font-awesome-sprockets";
