--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -29,11 +29,11 @@ h3.carousel__gift-name {
   @include akkurat-light;
   margin-bottom: 13px;
 }
-.byline {
-  @include akkurat-mono;
-  font-weight: normal;
-  margin-bottom: 56px;
-}
+// .byline {
+//   @include akkurat-mono;
+//   font-weight: normal;
+//   margin-bottom: 56px;
+// }
 h4 {
   font-size: 24px;
   letter-spacing: 0;
