--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -29,13 +29,8 @@ h3.carousel__gift-name {
   @include akkurat-light;
   margin-bottom: 13px;
 }
-// .byline {
-//   @include akkurat-mono;
-//   font-weight: normal;
-//   margin-bottom: 56px;
-// }
 h4 {
-  font-size: 24px;
+  font-size: rem(24);
   letter-spacing: 0;
   margin-bottom: 16px;
 }
@@ -77,6 +72,7 @@ strong {
   @include akkurat-bold;
 }
 a:hover,
+a:focus,
 a:active {
   background-color: rgba(196, 210, 233, .2);
 }
