--- a/app/assets/stylesheets/modules/_grid.scss
+++ b/app/assets/stylesheets/modules/_grid.scss
@@ -41,6 +41,10 @@ body,
   min-width: 1140px;
 }
 
+body.modal-body {
+  min-width: auto;
+}
+
 /* Don't let the lead text change font-size. */
 // .lead {
 //   font-size: 16px;
