--- a/app/views/admin/gifts/index.html.haml
+++ b/app/views/admin/gifts/index.html.haml
@@ -48,8 +48,10 @@
             %td= gift.wrapt_sku
             %td.text-right= number_to_currency gift.selling_price
             %td.text-right= gift.availability_string
-            %td.admin-index-table--buttons-cell
+            %td.admin-index-table--buttons-cell(style="line-height: 24px; text-align: left;")
               = link_to 'View', [:admin, gift], class: 'btn btn-default btn-xs'
+              = link_to 'Preview', admin_gift_preview_modal_path(gift), class: 'btn btn-default btn-xs', data: {loads_in_pjax_modal: true}
+              %br
               = link_to 'Edit', edit_admin_gift_path(gift), class: 'btn btn-default btn-xs'
               = link_to 'Delete', admin_gift_path(gift, context_params), :method => :delete, :data => { :confirm => 'Are you sure you want to delete this gift?' }, class: 'btn btn-danger btn-xs'
     
