--- a/app/views/gift_selections/_gift_basket.haml
+++ b/app/views/gift_selections/_gift_basket.haml
@@ -13,7 +13,7 @@
         %span.pull-right &#8212;
       %p.help.gift-basket__footer__text In our beta testing phase we are not fulfilling gift selections but we are asking that you send a notifcation to your Giftee telling them what you selected so we can inquire about effectiveness of our recommendations
       
-      = form_tag profile_checkout_path(@profile) do
+      = form_tag profile_checkout_path(profile) do
 
         = submit_tag 'SEND GIFT SELECTION NOTIFICATION', class: 'btn btn-primary btn-full-width btn-gift-basket-submit'
 
