--- a/app/views/admin/gifts/index.html.haml
+++ b/app/views/admin/gifts/index.html.haml
@@ -5,6 +5,7 @@
 .row.admin__actions
   .col-sm-12
     = link_to 'Add a Gift', new_admin_gift_path, class: 'btn btn-primary'
+    = link_to 'Unintended Single Product Gifts', admin_faux_single_product_gifts_path, class: 'btn btn-primary'
 
 .row.admin__search
   .col-sm-12
