--- a/app/assets/stylesheets/helpers/_variables.scss
+++ b/app/assets/stylesheets/helpers/_variables.scss
@@ -13,6 +13,7 @@ $gray-005: rgb(196, 196, 196); // #C4C4C4
 $gray-006: rgb(149, 152, 159); // #95989f help text
 $gray-007: rgb(118, 118, 118); // #767676
 $gray-008: rgb(77, 76, 77); // #4d4c4d
+$gray-009: rgb(68, 68, 68); // #444
 $gray-010: rgb(51, 51, 51); // #333
 $gray-011: rgb(250, 251, 252); // #FAFBFC
 $black: #000;
