--- a/app/assets/stylesheets/modules/_gift_recommendations.scss
+++ b/app/assets/stylesheets/modules/_gift_recommendations.scss
@@ -85,7 +85,7 @@ $gr-carousel-nav__width: 82.5px;
 
 .gr-carousel__indicators {
   position: static;
-  margin-top: 60px;
+  margin-top: 63px;
   text-align: center;
 }
 
@@ -95,6 +95,12 @@ $gr-carousel-nav__width: 82.5px;
   width: auto;
   height: auto;
 }
+.gr-carousel__indicator:hover,
+.gr-carousel__indicator:focus,
+.gr-carousel__indicator:active {
+  background-color: initial;
+  text-decoration: none;
+}
 
 .gr__indicator-inactive-overlay {
   position: absolute;
@@ -102,7 +108,12 @@ $gr-carousel-nav__width: 82.5px;
   left: 0;
   height: 100%;
   width: 100%;
-  background: rgba(111,111,111,0.8);
+  background: rgba(51, 51, 51, 0.4);
+}
+.gr-carousel__indicator:hover .gr__indicator-inactive-overlay ,
+.gr-carousel__indicator:focus .gr__indicator-inactive-overlay ,
+.gr-carousel__indicator:active .gr__indicator-inactive-overlay  {
+  background: none;
 }
 
 .gr-carousel__indicator.active .gr__indicator-inactive-overlay {
@@ -113,15 +124,17 @@ $gr-carousel-nav__width: 82.5px;
   display: inline-block;
   width: 136px;
   height: 112px;
+  margin-right: 22px;
   text-align: center;
-  margin: 30px;
   position: relative;
   overflow: hidden;
 }
+.gr-carousel__indicator:last-child .gr-carousel__thumbnail {
+  margin-right: 0;
+}
 
 .gr-carousel__indicator img {
-  min-height: 100%;
-  min-width: 100%;
+  width: 100%;
 }
 
 // gift recommendations carousel gift
@@ -271,17 +284,26 @@ a.disliked:focus {
 }
 
 .gr-image-carousel__image {
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
   white-space: normal;
   background-repeat: no-repeat;
   background-position: center;
-
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-color: $gray-009;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
   position: relative;
+}
+.gr-image-carousel__image.orientation-portrait {
+  height: 100%;
+  width: inherit;
+}
+.gr-image-carousel__image.orientation-square,
+.gr-image-carousel__image.orientation-landscape {
+  width: 100%;
+  height: inherit;
 }
 
 .gr-image-carousel__image-text {
@@ -300,7 +322,7 @@ a.disliked:focus {
   width: 400px;
   position: absolute;
   bottom: 40px;
-  background-color: rgba(51, 51, 51, 0.8);
+  background-color: $gray-010;
   height: 56px;
 }
 .gr-image-carousel__nav {
