--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -28,6 +28,7 @@ h3 {
 h3.carousel__gift-name {
   @include akkurat-light;
   margin-bottom: 13px;
+  margin-top: 12px;
 }
 h4 {
   font-size: rem(24);
