--- a/app/views/gift_recommendations/_gift.haml
+++ b/app/views/gift_recommendations/_gift.haml
@@ -5,7 +5,7 @@
     - gift_images = load_gift_image_carousel_data(gift.gift_images)
     = carousel(carousel: gift_images, unique_carousel_name: 'gr-image-carousel', slide_content_singular: 'image', container:'.gr-carousel')
   .gr-carousel__gift-content.pb2.pl2.pt1.pr1
-    .gr-carousel__dislike.text-right.pb1{data: {gift_recommendation_id: gr.id}}
+    .gr-carousel__dislike.pull-right.text-right.pb1{data: {gift_recommendation_id: gr.id}}
       = render 'gift_dislike', gift_recommendation: gr, profile: @profile
     %h3.carousel__gift-name= gift.name
     .gr-carousel__gift-details
