stub out static pages

--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -37,3 +37,11 @@ footer li:after {
 footer li:last-child:after {
   content: '';
 }
+footer li a {
+  color: $gray-006;
+  cursor: pointer;
+  &:hover {
+    // color: $gray-006;
+    text-decoration: none;
+  }
+}
