--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -7,6 +7,6 @@
             %li
               2017 Wrapt All Rights Reserved
             %li
-              Privacy Policy
+              = link_to "Privacy Policy", privacy_policy_path
             %li
-              Terms &amp; Conditions
+              = link_to 'Terms & Conditions', terms_of_service_path
