--- a/app/views/layouts/_top_nav.haml
+++ b/app/views/layouts/_top_nav.haml
@@ -20,7 +20,7 @@
                 =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
                 My Account
           %li
-            = link_to '#' do
+            = link_to science_of_gifting_path do
               =embedded_svg('icon-circle', class: "icon navbar-static-top__icon-circle")
               Science of Gifting
           %li
